@@ -148,13 +148,13 @@ SHLIBDIRS= crypto
 SDIRS=  \
 	sha hmac des aes modes \
 	bn ec rsa dsa ecdsa dh \
-	buffer rand evp # ecdh cmac
+	buffer rand evp ecdh # cmac
 # keep in mind that the above list is adjusted by ./Configure
 # according to no-xxx arguments...
 
 LINKDIRS=  \
 	objects sha hmac des aes modes \
-	bn ec rsa dsa ecdsa dh ecdh engine \
+	bn ec rsa dsa ecdh ecdsa dh engine \
 	buffer bio stack lhash rand err \
 	evp asn1 ui cmac
 
@@ -325,6 +325,8 @@ FIPS_EX_OBJ= ../crypto/aes/aes_cfb.o \
 	../crypto/ec/ecp_smpl.o \
 	../crypto/ec/ec2_mult.o \
 	../crypto/ec/ec2_smpl.o \
+	../crypto/ecdh/ech_key.o \
+	../crypto/ecdh/ech_ossl.o \
 	../crypto/ecdsa/ecs_ossl.o \
 	../crypto/evp/e_aes.o \
 	../crypto/evp/e_des3.o \
