@@ -67,6 +67,8 @@
  *
  */
 
+#define OPENSSL_FIPSAPI
+
 #include "ech_locl.h"
 #ifndef OPENSSL_NO_ENGINE
 #include <openssl/engine.h>
